Dropped java version to run on cluster - code changes